# url-to-llm

./: .env.example  .env.production  .gcloudignore  .gitignore  CLAUDE.md  CLOUD_RUN_FIX.md  CLOUD_RUN_SETUP.md  CONTENT_FORMATTING_LOGIC.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DEPLOY_CLOUD_RUN.md  Dockerfile  FIXES_SUMMARY.md  FRONTEND_DEPLOYMENT.md  LAUNCH_CHECKLIST.md  LICENSE  Makefile  NAVIGATION_IMPROVEMENTS.md  PREMIUM_EXTRACTION_PLAN.md  PRODUCTION_DEPLOYMENT.md  Procfile  QUICK_START.md  README.md  SYSTEM_ANALYSIS_REPORT.md  app.json  cloud-run-backend.yaml  cloudbuild.yaml  create-github-repo.sh  docker-compose.prod.yml  docker-compose.yml  env-vars.yaml  push-to-github.sh  service.yaml  test_crawler.py  url-to-llm.sh  web-content-extraction-2025-best-practices.md
.github/: CODEOWNERS  cliff.toml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-cloud-run.yml  deploy.yml  release.yml  security.yml
backend/: Dockerfile  Dockerfile.cloudrun  README.md  pyproject.toml  requirements.txt  run.py  run_migrations.py
backend/alembic/versions/: 003_add_documentation_tables.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: agent.py  crawl.py  crawl_websocket.py  documentation.py  websocket.py
backend/app/core/: celery_app.py  cloud_config.py  config.py
backend/app/crawler/: __init__.py  crawler.py  documentation_crawler.py  manifest.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/migrations/: 002_create_jobs_table.sql  003_documentation_hosting.sql
backend/app/models/: __init__.py  auth.py  documentation_dto.py  jobs.py  mcp.py
backend/app/repositories/: jobs.py  users.py
backend/app/routers/: auth.py  dev.py  mcp.py  users.py
backend/app/services/: auth.py  crawler_service.py  rate_limit.py  storage.py
backend/app/storage/: __init__.py  gcs_storage.py  s3_client.py
backend/app/tasks/: __init__.py  crawler_integration.py  crawler_tasks.py
backend/app/utils/: simple_crawler.py
backend/migrations/: 001_initial_schema.sql
backend/tests/: conftest.py  test_health.py
crawler/: Dockerfile  README.md  playwright.config.ts  pyproject.toml  requirements.txt
crawler/src/: __init__.py  cli.py  crawler.py  detector.py  fetcher.py  manifest.py  storage.py
crawler/tests/: test_manifest.py
docs/: deployment.md
frontend/: .gcloudignore  Dockerfile  Dockerfile.cloudrun  Dockerfile.prod  cloudbuild.yaml  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/__tests__/components/: CrawlStats.test.tsx
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx  page.tsx.old
frontend/app/analytics/: page.tsx
frontend/app/api-tools/: page.tsx
frontend/app/api/crawl/test/: route.ts
frontend/app/docs/: page.tsx.old
frontend/app/docs/[host]/: page.tsx
frontend/app/docs/[host]/[...path]/: page.tsx
frontend/app/docs/api/: page.tsx
frontend/app/hosts/: page.tsx
frontend/app/hosts/[host]/: page.tsx
frontend/app/jobs/: page.tsx
frontend/app/jobs/[id]/: job-details-client.tsx  page.tsx
frontend/app/manifests/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/test-crawler/: page.tsx
frontend/components/: CrawlProgress.tsx  CrawlStats.tsx  HostTable.tsx  ManifestViewer.tsx  PageExplorer.tsx  QuickActions.tsx  breadcrumb.tsx  documentation-site-card.tsx  header.tsx  hierarchical-navigation.tsx  job-progress.tsx  manifest-preview.tsx  sidebar.tsx
frontend/hooks/: useCrawlProgress.ts  useWebSocket.ts
frontend/lib/: api.ts  types.ts  utils.ts
nginx/: nginx.conf
scripts/: deploy.sh  setup-gcp.sh
